busybox-debug-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: busybox-debug
  labels:
    app: debug
spec:
  containers:
  - image: busybox
    name: busybox
    command: ["sh", "-c", "sleep 1000"]
