sidecar-logging-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sidecar-logging-deployment
  labels:
    app: sidecar-logging
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sidecar-logging
  template:
    metadata:
      labels:
        app: sidecar-logging
    spec:
      containers:
      - name: main-app
        image: busybox
        command: ["sh", "-c"]
        args:
        - while true; do
            echo "$(date) INFO some app data" >> /var/log-nginx/myapp.log;
            sleep 20;
          done
        volumeMounts:
        - name: log-data
          mountPath: /var/log-nginx

      - name: log-sidecar
        image: busybox
        command: ["sh", "-c"]
        args:
        - printenv NODE_NAME POD_NAME POD_SERVICE_ACCOUNT POD_IP_ADDRESS;
          while true; do
            tail -f /var/sidecar/myapp.log;
            sleep 20;
          done 
        volumeMounts:
        - name: log-data
          mountPath: /var/sidecar
      volumes:
      - name: log-data
        emptyDir: {}
