my-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: nginx-service
      port:
        number: 8080
  rules:
  - host: k8s-ingress-nginx-controller-lb-1786688076.eu-west-1.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: nginx-service 
            port:
              number: 8080
        path: /
        pathType: Exact
